--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 2021/a-new-function-to-plot-convergence-diagnostics-from-lme4-allfit/m1_allFit_convergence.rds
+2024/rscopus-plus-a-little-extension-of-the-rscopus-package/scopus_key.txt
