--- a/.github/workflows/update-cv.yml
+++ b/.github/workflows/update-cv.yml
@@ -48,13 +48,13 @@ jobs:
         
         echo "Successfully downloaded valid PDF (${file_size} bytes)"
         
-        # Move to final location in static directory
-        mv temp-cv.pdf static/cv-pablo-bernabeu.pdf
+        # Move to final location in public directory
+        mv temp-cv.pdf public/cv-pablo-bernabeu.pdf
         
     - name: Check for changes
       id: changes
       run: |
-        if git diff --quiet static/cv-pablo-bernabeu.pdf; then
+        if git diff --quiet public/cv-pablo-bernabeu.pdf; then
           echo "No changes detected in CV"
           echo "changed=false" >> $GITHUB_OUTPUT
         else
@@ -67,6 +67,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add static/cv-pablo-bernabeu.pdf
+        git add public/cv-pablo-bernabeu.pdf
         git commit -m "Automated CV update from OSF"
         git push
